# OpenPyrojet-Jetpack

./: .gitignore  CMakeLists.txt  LICENSE-THIRD-PARTY.md  README.md  build.sh  flash.ps1  flash.sh  package.sh  partitions.csv  sdkconfig
.github/workflows/: build-and-package.yml  build.yml  release.yml
docs/: development.md
main/: CMakeLists.txt
main/config/: default.json
main/src/: alloc.h  app_state.c  app_state.h  config.c  config.h  config_json.c  config_json.h  display.c  display.h  display_config.c  display_config.h  display_config_json.c  display_config_json.h  display_page.c  display_page.h  file.c  file.h  fs_init.c  fs_init.h  jetpack_io.c  jetpack_io.h  jetpack_main.c  jetpack_main.h  jetpack_rest.c  jetpack_rest.h  json.c  json.h  log.h  main.c  message.h  message_json.c  message_json.h  rest_base.c  rest_base.h  rest_handler_config.c  rest_handler_config.h  rest_handler_reboot.c  rest_handler_reboot.h  rest_handler_wifi.c  rest_handler_wifi.h  (+32 more)
main/src/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_i2c.c  ssd1306_spi.c
main/www/: index.html
main/www/public/: index.html
main/www/src/: App.vue  router.js
main/www/src/plugins/: vuetify.js
main/www/src/views/: Home.vue  System.vue
tools/: flash.sh
